--- a/plant-app/plant-app.css
+++ b/plant-app/plant-app.css
@@ -1,6 +1,9 @@
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgb(170, 212, 131);
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
 }
 a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -11,6 +14,7 @@ img {
     height: auto;
     border-radius: 10px;
     opacity: 0.5;
+    
 }
 ul {
   list-style-type: none;
@@ -18,6 +22,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: rgb(5, 65, 5);
+  border-radius: 10px;
 }
 
 li {
@@ -46,6 +51,7 @@ li a:hover {
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
+  border-radius: 10px;
  
 }
 #plant_button:hover {
@@ -59,6 +65,7 @@ li a:hover {
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
+  border-radius: 10px;
  
 }
 #digup_button:hover {
@@ -72,8 +79,33 @@ li a:hover {
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
+  border-radius: 10px;
   
 }
 #water_button:hover {
   background-color:rgb(2, 48, 2);
+}
+
+
+/* styling for the form */
+input[type=text],  select {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+input[type=date],  select {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
